src/assets/styles/styles.scss
$light-mode: #f2f3f5;
$main-light: #e3e5e8;
$very-light: #ffffff;
$dark-mode: #222;
$main-dark: #333333;
$base-color: #7371fc;
$very-dark: #151515;
$border-light: rgba($base-color, 0.88);
$border-dark: rgba($base-color, 0.88);

html, body, #root {
  overflow-y: hidden;
}

body {
  height: 100%;
  overflow-x: hidden;
}

#root {
  width: 100%;
}
 
.top-container {
  display: flex;
  color: #000;
  background-color: $very-light;
}

.main {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow-y: auto;
  scrollbar-width: thin;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

button:hover {
  background-color: $main-light;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: transparent;
  color: white; /*//TODO:*/
  cursor: pointer;
  transition: border-color 0.25s;
}

a {
  font-weight: 500;
}

.listing {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: $light-mode;
  border-radius: 6px;
  padding-left: 5px;
  height: 44px;
  button {
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .active-checkbox {
    width: 2.5rem;
    height: 2.5rem;
    margin: 0;
    border-radius: 8px;
    margin-right: 2px;
  }
  .button-container {
    display: flex;
    align-items: center;
    justify-content: end;
    margin-right: 6px;
  }
  .display-name {
    max-width: 200px;
    overflow-x: hidden;
    text-overflow: ellipsis;
  }
}

.form-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

form {
  display: flex;
  flex-direction: column;
  gap: 8px;
  margin: auto auto;
  width: 100%;
  box-sizing: border-box;
  font-size: 16px;

  .file-input {
    margin: 16px 0;
  }

  .css-input {
    resize: vertical;
    font-size: 18px;
  }

  .style-form-button-container {
    width: 100%;
    display: flex;
    justify-content: center;
  }

  label, .style-active-container, .import-export-container {
    background-color: $main-light;
    border-radius: 8px;
    padding: 5px;
    box-sizing: border-box;
    height: min-content;
    color: #000;
  }

  .style-active-container {
    display: flex;
    justify-content: space-between;
  }

  .checkbox-label {
    flex-direction: row;
  }

  .checkbox {
    display: none;
  }

  .activate-text {
    display: flex;
    align-items: center;
  }

  .style-active-container, label {
    &:focus-within {
      background-color: #ddd !important; /*//TODO:*/
    }

    &:hover {
      background-color: #ddd !important; /*//TODO:*/
    }
  }

  label {
    input, textarea {
      &:-moz-focusring {
        outline: 0;
        border: 0;
      }
      font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
      border: none;
      background-color: transparent;
      color: #000;
    }
    display: flex;
    flex-direction: column;
    gap: 0;
  }
  
  .import-export-container {
    margin-top: 41px;
  }

  .website-input {
    display: flex;
    gap: 8px;
  }

  textarea {
    margin-top: 4px;
  }
  
  #website-input {
    margin-top: -5px;
    height: 22px;
    font-size: 18px;
  }

  button {
    background-color: $light-mode;
    color: black;
    
    &:hover {
      background-color: $main-light;
    }
  }
}

.new-form, .editing-form {
  border-radius: 0 !important;
  padding: 5px 5px;
  margin: auto auto auto auto;
}

.editing-form {
  margin-top: 8px;
}

.new-form {
  margin-top: 5px;
}

.form-input-container {
  display: flex;
  gap: 8px;
  button {
    width: unset;
    border: 2px solid $border-light;
    display: flex;
    place-items: center;
  }
}

.form-checkbox-container {
  margin-top: auto;
  margin-bottom: auto;
  margin-right: 5px;
}

.checkbox-container {
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  font-size: 22px;
  height: 30px;
  width: 30px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-sizing: border-box;
}

.checkbox-container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0 !important;
  width: 0 !important;
  margin: 0 !important;
  padding: 0 !important;
  border: 0 !important;
}

.checkmark {
  display: block;
  height: 30px !important;
  width: 30px !important;
  background-color: $light-mode;
  border: $border-light 2px solid;
  box-sizing: border-box;
}

.checkbox-container:hover input ~ .checkmark {
  background-color: $main-light;
}

.checkmark:after {
  content: "";
  display: none;
  margin: 4px 0 0 4px;
}

.checkbox-container input:checked ~ .checkmark:after {
  display: block;
}

.checkbox-container .checkmark:after {
  width: 18px;
  height: 18px;
  background-color: $border-light;
}

body {
  margin: 0;
  display: flex;
  width: 350px;
  height: 420px;
}

.listings {
  display: flex;
  flex-direction: column;
  background-color: unset;
  padding: 5px;
  gap: 4px;
  border-radius: 8px;
  box-sizing: border-box;
  width: 100%;
}
/* ... */

